# ai-trading-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PLANS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/adapters/: disabled.py  factories.py  fmp_calendar.py  json_decoding.py  twelve_data.py
app/api/: __init__.py  dependencies.py  error_handlers.py
app/core/: config.py  constants.py  enums.py  exceptions.py  logging.py  security.py  time.py
app/domain/: __init__.py  analysis_engine.py  context_engine.py  disabled_pipeline_report_shell.py  feature_engine.py  manual_review_comparison.py  readiness_engine.py  (+8 more)
docs/: architecture-v1.md  chatgpt-verification-packet.md  database-schema.md  foundation-report.md  implementation-plan.md  operations.md  phase2-verification-report.md  phase3b-verification-report.md  phase3c-verification-report.md  phase3d-verification-report.md  phase3e-verification-report.md  phase3f-verification-report.md  phase3g-verification-report.md  phase3h-verification-report.md  phase3i-verification-report.md  phase4a-verification-report.md  phase4b-verification-report.md  phase4c-verification-report.md  phase4d-verification-report.md  phase4e-verification-report.md  phase4f-verification-report.md  phase4g-verification-report.md  phase5-verification-report.md  phase6-verification-report.md  specification-v1.md
migrations/: env.py
scripts/: manual_review_report.py  process_health.py  security_check.py  seed_local_snapshot_data.py
tests/: conftest.py  fakes.py
(+112 files in other folders)
