[project]
name = "ai-trading-os"
version = "0.1.0"
description = "Safety-first foundation for a modular Forex analysis and paper-trading platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.3,<2.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-telegram-bot>=21.6,<22.0",
    "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2,<2.0.0",
    "pytest>=8.3.2,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.6.4,<1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require PostgreSQL or a running ASGI app",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["app"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
